# cursus_copy

./: journey-into-studybuddy.md  vercel.config.test.mjs  vercel.json
backend/: .env.example  .gitignore  docker-compose.yml  pyproject.toml  railway.json
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_rag_chat.py  0003_course_status.py  0004_deadline_manual_submit.py  0005_study_plans.py
backend/studybuddy/: config.py  main.py
backend/studybuddy/api/: chat_messages.py  chat_sessions.py  courses.py  deadlines.py  materials.py  onboarding.py  study_plan.py  sync_route.py
backend/studybuddy/auth/: deps.py  magic_link.py  routes.py  session.py
backend/studybuddy/canvas/: classify.py  client.py  domains.py
backend/studybuddy/chat/: deps.py  prompts.py  query_rewriter.py  service.py
backend/studybuddy/cli/: __main__.py  commands.py
backend/tests/: conftest.py  test_api_chat_messages.py  test_api_chat_sessions.py  test_api_materials.py  test_auth_routes.py  test_canvas_client.py  test_canvas_domains.py  test_chat_deps.py  test_chat_prompts.py  test_chat_service.py  test_classify.py  test_cli.py  test_config_rag.py  test_deadlines.py  test_email.py  test_health.py  test_magic_link.py  test_migration_0002.py  test_models_rag.py  test_onboarding.py  test_query_rewriter.py  test_rag_chunker.py  test_rag_downloader.py  test_rag_embedder.py  test_rag_indexer.py  test_rag_parser.py  test_rag_reranker.py  test_rag_retrieval.py  test_security.py  test_session.py  test_study_plan_api.py  test_sync.py  test_sync_indexing.py
(+119 files in other folders)
