[project]
name = "studybuddy"
version = "0.1.0"
description = "EUR Canvas study buddy — v1 deadline dashboard"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.0",
  "sqlalchemy[asyncio]==2.0.35",
  "asyncpg==0.29.0",
  "alembic==1.13.3",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "email-validator==2.2.0",
  "tzdata==2024.2",
  "httpx==0.27.2",
  "cryptography==43.0.1",
  "python-multipart==0.0.12",
  "itsdangerous==2.2.0",
  "typer==0.12.5",
  "markitdown[pdf,pptx,docx]>=0.0.2",
  "tiktoken>=0.7",
  "voyageai>=0.2",
  "anthropic>=0.40",
  "trafilatura>=1.12",
  "sse-starlette>=2.1",
  "pgvector>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-httpx==0.32.0",
  "httpx==0.27.2",
  "aiosqlite==0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
